RESOLVED FIXED285747
[JSC] Unreviewed: Fix build after 288688@main
https://bugs.webkit.org/show_bug.cgi?id=285747
Summary [JSC] Unreviewed: Fix build after 288688@main
Alicia Boya García
Reported 2025-01-10 07:40:26 PST
288688@main introduced usage of raw C arrays, which is not allowed in the current safer C++ guidelines enforced by the clang build.
Attachments
Alicia Boya García
Comment 1 2025-01-10 07:45:15 PST
EWS
Comment 2 2025-01-10 07:48:42 PST
Committed 288709@main (88ba17932975): <https://commits.webkit.org/288709@main> Reviewed commits have been landed. Closing PR #38844 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-10 07:49:15 PST
Note You need to log in before you can comment on or make changes to this bug.