[JSC] Unreviewed: Fix build after 288688@main https://bugs.webkit.org/show_bug.cgi?id=285747

288688@main introduced usage of raw C arrays, which is not allowed in
the current safer C++ guidelines enforced by the clang build:

```
JavaScriptCore/API/glib/JSCValue.cpp:2194:5: error: unsafe buffer access [-Werror,-Wunsafe-buffer-usage]
 2194 |     arguments[1] = rejectObj;
      |     ^~~~~~~~~
```

This patch replaces that particular usage with std::array<> to fix the
build error.

* Source/JavaScriptCore/API/glib/JSCValue.cpp:
(jsc_value_new_promise):

Canonical link: https://commits.webkit.org/288709@main